Name:                gloss
Version:             1.0
Description:         Painless 2D vector graphics, animations and simulations.
License:             MIT
License-file:        LICENSE
Author:              Ben Lippmeier
Maintainer:          gloss@ouroborus.net
Build-Type:          Simple
Cabal-Version:       >=1.2

Executable Easy
  Main-is:  examples/Easy/Main.hs
  Build-depends: base >= 3 && base < 5
