Name:                gloss-algorithms
Version:             1.13.0.3
License:             MIT
License-file:        LICENSE
Author:              Ben Lippmeier
Maintainer:          benl@ouroborus.net
Build-Type:          Simple
Cabal-Version:       >=1.10
Stability:           stable
Category:            Graphics
Homepage:            http://gloss.ouroborus.net
Bug-reports:         gloss@ouroborus.net
Description:
        Data structures and algorithms for working with 2D graphics.

Synopsis:
        Data structures and algorithms for working with 2D graphics.

source-repository head
  type:           git
  location:       https://github.com/benl23x5/gloss

source-repository this
  type:         git
  tag:          v1.12.0.0
  location:     https://github.com/benl23x5/gloss

Library
  Build-Depends:
          base                          >= 4.8 && < 5
        , ghc-prim
        , containers                    >= 0.5 && < 0.7
        , gloss                         == 1.13.*

  Default-Language:
        Haskell2010

  ghc-options:
        -O2
        -Wall

  Exposed-modules:
        Graphics.Gloss.Algorithms.RayCast
        Graphics.Gloss.Data.Extent
        Graphics.Gloss.Data.Quad
        Graphics.Gloss.Data.QuadTree

-- vim: nospell
