Name:                gloss-algorithms
Version:             1.13.0.3
License:             MIT
License-file:        LICENSE
Author:              Ben Lippmeier
Maintainer:          benl@ouroborus.net
Build-Type:          Simple
Cabal-Version:       >=1.10
Stability:           stable
Category:            Graphics
Homepage:            http://gloss.ouroborus.net
Bug-reports:         gloss@ouroborus.net
Description:
        Data structures and algorithms for working with 2D graphics.

Synopsis:
        Data structures and algorithms for working with 2D graphics

tested-with:
  GHC == 9.10.1
  GHC == 9.8.2
  GHC == 9.6.6
  GHC == 9.4.8
  GHC == 9.2.8
  GHC == 9.0.2
  GHC == 8.10.7
  GHC == 8.8.4
  GHC == 8.6.5
  GHC == 8.4.4
  GHC == 8.2.2
  GHC == 8.0.2

source-repository head
  type:           git
  location:       https://github.com/benl23x5/gloss

Library
  Build-Depends:
          base                          >= 4.8 && < 5
        , ghc-prim
        , containers                    >= 0.5 && < 0.8
        , gloss                         == 1.13.*

  Default-Language:
        Haskell2010

  ghc-options:
        -O2
        -Wall

  Exposed-modules:
        Graphics.Gloss.Algorithms.RayCast
        Graphics.Gloss.Data.Extent
        Graphics.Gloss.Data.Quad
        Graphics.Gloss.Data.QuadTree

-- vim: nospell
