Name:                gloss-examples-gameevent
Version:             1.9.2.1
License:             MIT
License-file:        LICENSE
Author:              Ben Lippmeier
Maintainer:          benl@ouroborus.net
Build-Type:          Simple
Cabal-Version:       >=1.6
Stability:           experimental
Category:            Graphics
Homepage:            http://gloss.ouroborus.net
Bug-reports:         gloss@ouroborus.net
Description:         
	An examples using the gloss graphics library.

Synopsis:
        Display the last event received as text.

source-repository head
        type:           git
        location:       https://github.com/benl23x5/gloss

Executable gloss-gameevent
  Build-depends: 
        base            == 4.7.*,
        gloss           == 1.9.2.*
  Main-is:        Main.hs
  hs-source-dirs: src
  ghc-options:    -threaded -O2
