Name:                gloss-examples-hello
Version:             1.9.2.1
License:             MIT
License-file:        LICENSE
Author:              Ben Lippmeier
Maintainer:          benl@ouroborus.net
Build-Type:          Simple
Cabal-Version:       >=1.6
Stability:           experimental
Category:            Graphics
Homepage:            http://gloss.ouroborus.net
Bug-reports:         gloss@ouroborus.net
Description:         
	An example using the gloss graphics library.

Synopsis:
        Display "Hello World" in a window.

source-repository head
        type:           git
        location:       https://github.com/benl23x5/gloss

Executable gloss-hello
  Build-depends: 
        base            == 4.7.*, 
        gloss           == 1.9.2.*
  Main-is:        Main.hs
  hs-source-dirs: src
  ghc-options:    -threaded -O2
