Name:                gloss-examples-render
Version:             1.9.2.1
License:             MIT
License-file:        LICENSE
Author:              Ben Lippmeier
Maintainer:          benl@ouroborus.net
Build-Type:          Simple
Cabal-Version:       >=1.6
Stability:           experimental
Category:            Graphics
Homepage:            http://gloss.ouroborus.net
Bug-reports:         gloss@ouroborus.net
Description:         
	An example using the gloss graphics library.

Synopsis:


source-repository head
        type:           git
        location:       https://github.com/benl23x5/gloss

Executable gloss-render
  Build-depends:
        base            == 4.7.*,
        containers      == 0.5.*,
        gloss           == 1.9.2.*,
        gloss-rendering == 1.9.2.*,
        GLFW-b
  Main-is:        Main.hs
  hs-source-dirs: src
  ghc-options:
        -Wall -O2
