Name:                gloss-examples-styrene
Version:             1.9.2.1
License:             MIT
License-file:        LICENSE
Author:              Ben Lippmeier
Maintainer:          benl@ouroborus.net
Build-Type:          Simple
Cabal-Version:       >=1.6
Stability:           experimental
Category:            Graphics
Homepage:            http://gloss.ouroborus.net
Bug-reports:         gloss@ouroborus.net
Description:         
	An examples using the gloss graphics library.

Synopsis:


source-repository head
        type:           git
        location:       https://github.com/benl23x5/gloss

Executable gloss-styrene
  Build-depends: 
        base            == 4.7.*,
        ghc-prim        == 0.3.*,
        containers      == 0.5.*,
        gloss           == 1.9.2.*
  Main-is:        Main.hs
  other-modules:  Actor Advance Collide Config Contact QuadTree World
  hs-source-dirs: src
  ghc-options:    -threaded -O2
