Name:                gloss-examples-zen
Version:             1.9.2.1
License:             MIT
License-file:        LICENSE
Author:              Ben Lippmeier
Maintainer:          benl@ouroborus.net
Build-Type:          Simple
Cabal-Version:       >=1.6
Stability:           experimental
Category:            Graphics
Homepage:            http://gloss.ouroborus.net
Bug-reports:         gloss@ouroborus.net
Description:         
	An example using the gloss graphics library.

Synopsis:
        A nifty animated fractal of a tree, superimposed on a background 
        of three red rectangles.

source-repository head
        type:           git
        location:       https://github.com/benl23x5/gloss

Executable gloss-zen
  Build-depends: 
        base            == 4.7.*, 
        gloss           == 1.9.2.*
  Main-is:        Main.hs
  hs-source-dirs: src
  ghc-options:    -threaded -O2
