Name:                gloss-examples
Version:             1.9.2.1
License:             MIT
License-file:        LICENSE
Author:              Ben Lippmeier
Maintainer:          benl@ouroborus.net
Build-Type:          Simple
Cabal-Version:       >=1.6
Stability:           experimental
Category:            Graphics
Homepage:            http://gloss.ouroborus.net
Bug-reports:         gloss@ouroborus.net
Description:         
	Examples using the gloss graphics library.
        A mixed bag of fractals, particle simulations and cellular automata.

Synopsis:
        Examples using the gloss library

source-repository head
        type:           git
        location:       https://github.com/benl23x5/gloss

Executable gloss-crystal
  Build-depends:
        base            == 4.7.*,
        gloss           == 1.9.2.*,
        gloss-raster    == 1.9.2.*
  Main-is:        Main.hs
  hs-source-dirs: raster/Crystal
  ghc-options:    
        -Wall -threaded -rtsopts -eventlog
        -Odph -fno-liberate-case
        -funfolding-use-threshold1000
        -funfolding-keeness-factor1000
        -fllvm -optlo-O3
  extensions:
        PatternGuards
        BangPatterns
        

Executable gloss-ray
  Build-depends:
        base           == 4.7.*,
        gloss          == 1.9.2.*,
        gloss-raster   == 1.9.2.*
  Main-is:        Main.hs
  other-modules:  Light Object Trace Vec3 World
  hs-source-dirs: raster/Ray
  ghc-options:    
        -Wall -threaded -rtsopts -eventlog
        -Odph -fno-liberate-case
        -funfolding-use-threshold1000
        -funfolding-keeness-factor1000
        -fllvm -optlo-O3


Executable gloss-pulse
  Build-depends:
        base           == 4.7.*,
        gloss          == 1.9.2.*,
        gloss-raster   == 1.9.2.*
  Main-is:        Main.hs
  hs-source-dirs: raster/Pulse
  ghc-options:
        -Wall -threaded -rtsopts -eventlog
        -Odph -fno-liberate-case
        -funfolding-use-threshold1000
        -funfolding-keeness-factor1000
        -fllvm -optlo-O3


Executable gloss-wave
  Build-depends:
        base           == 4.7.*,
        ghc-prim       == 0.3.*,
        vector         == 0.10.*,
        gloss          == 1.9.2.*,
        gloss-raster   == 1.9.2.*
  Main-is:        Main.hs
  hs-source-dirs: raster/Wave
  ghc-options:
        -Wall -threaded -rtsopts -eventlog
        -Odph -fno-liberate-case
        -funfolding-use-threshold1000
        -funfolding-keeness-factor1000


Executable gloss-fluid
  Build-depends:
        base            == 4.7.*,
        ghc-prim        == 0.3.*,
        vector          == 0.10.*,
        repa            == 3.3.*,
        repa-io         == 3.3.*,
        repa-algorithms == 3.3.*,
        gloss           == 1.9.2.*
  Main-is:        Main.hs
  other-modules:  
        Args Config FieldElt Model UserEvent
        Solve.Density   Solve.Velocity
        Stage.Advection Stage.Boundary Stage.Diffusion
        Stage.Linear    Stage.Project  Stage.Sources
  hs-source-dirs: raster/Fluid/src-repa
  ghc-options:
        -Wall -threaded -rtsopts -eventlog
        -Odph -fno-liberate-case
        -funfolding-use-threshold1000
        -funfolding-keeness-factor1000
        -fllvm -optlo-O3
  extensions:
        PatternGuards
        

Executable gloss-snow
  Build-depends:
        base            == 4.7.*,
        repa            == 3.3.*,
        gloss           == 1.9.2.*
  Main-is:      Main.hs
  hs-source-dirs: raster/Snow
  ghc-options:
        -Wall -threaded -rtsopts -eventlog
        -Odph -fno-liberate-case
        -funfolding-use-threshold1000
        -funfolding-keeness-factor1000
        -fllvm -optlo-O3


Executable gloss-mandel
  Build-depends:
        base            == 4.7.*,
        repa            == 3.3.*,
        gloss           == 1.9.2.*
  Main-is:        Main.hs
  other-modules:  Solver
  hs-source-dirs: raster/Mandel
  ghc-options:
        -Wall -threaded -rtsopts -eventlog
        -Odph -fno-liberate-case
        -funfolding-use-threshold1000
        -funfolding-keeness-factor1000
        -fllvm -optlo-O3
  extensions:
        PatternGuards
