Name:                gloss-examples
Version:             1.11.1.1
License:             MIT
License-file:        LICENSE
Author:              Ben Lippmeier
Maintainer:          benl@ouroborus.net
Build-Type:          Simple
Cabal-Version:       >=1.6
Stability:           experimental
Category:            Graphics
Homepage:            http://gloss.ouroborus.net
Bug-reports:         gloss@ouroborus.net
Description:         
	Examples using the gloss graphics library.
        A mixed bag of fractals, particle simulations and cellular automata.

Synopsis:
        Examples using the gloss library

Flag llvm
  Description:  Compile via LLVM. This produces much better object code,
                but your GHC needs to have been built against the LLVM compiler.

  Default:      False

source-repository head
        type:           git
        location:       https://github.com/benl23x5/gloss

Executable gloss-bitmap
  Build-depends:
        base            >= 4.8 && < 4.10,
        bytestring      == 0.10.*,
        bmp             == 1.2.*,
        gloss           == 1.11.*
  Main-is: Main.hs
  hs-source-dirs: picture/Bitmap
  ghc-options:    -threaded -O2


Executable gloss-boids
  Build-depends:
        base            >= 4.8 && < 4.10,
        gloss           == 1.11.*
  Main-is:        Main.hs
  other-modules:  KDTree2d Vec2
  hs-source-dirs: picture/Boids
  ghc-options:    -threaded -O2


Executable gloss-clock
  Build-depends: 
        base            >= 4.8 && < 4.10,
        gloss           == 1.11.*
  Main-is:        Main.hs
  hs-source-dirs: picture/Clock
  ghc-options:    -threaded -O2


Executable gloss-color
  Build-depends: 
        base            >= 4.8 && < 4.10,
        vector          == 0.11.*,
        gloss           == 1.11.*
  Main-is:        Main.hs
  hs-source-dirs: picture/Color
  ghc-options:    -threaded -O2
  extensions: ParallelListComp


Executable gloss-conway
  Build-depends: 
        base            >= 4.8 && < 4.10,
        vector          == 0.11.*,
        gloss           == 1.11.*
  Main-is:        Main.hs
  other-modules:  Cell World
  hs-source-dirs: picture/Conway
  ghc-options:    -threaded -O2


Executable gloss-draw
  Build-depends:
        base            >= 4.8 && < 4.10,
        gloss           == 1.11.*
  Main-is:        Main.hs
  hs-source-dirs: picture/Draw
  ghc-options:    -threaded -O2


Executable gloss-easy
  Build-depends:
        base            >= 4.8 && < 4.10,
        gloss           == 1.11.*
  Main-is:        Main.hs
  hs-source-dirs: picture/Easy
  ghc-options:    -threaded -O2


Executable gloss-eden
  Build-depends: 
        base            >= 4.8 && < 4.10,
        random          == 1.1.*,
        gloss           == 1.11.*
  Main-is:        Main.hs
  other-modules:  Cell Community World
  hs-source-dirs: picture/Eden
  ghc-options:    -threaded -O2


Executable gloss-flake
  Build-depends:
        base            >= 4.8 && < 4.10,
        gloss           == 1.11.*
  Main-is:        Main.hs
  hs-source-dirs: picture/Flake
  ghc-options:    -threaded -O2


Executable gloss-gameevent
  Build-depends: 
        base            >= 4.8 && < 4.10,
        gloss           == 1.11.*
  Main-is:        Main.hs
  hs-source-dirs: picture/GameEvent
  ghc-options:    -threaded -O2


Executable gloss-hello
  Build-depends: 
        base            >= 4.8 && < 4.10,
        gloss           == 1.11.*
  Main-is:        Main.hs
  hs-source-dirs: picture/Hello
  ghc-options:    -threaded -O2


Executable gloss-lifespan
  Build-depends: 
        base            >= 4.8 && < 4.10,
        gloss           == 1.11.*,
        random          == 1.1.*
  Main-is:        Main.hs
  other-modules:  Cell Community World
  hs-source-dirs: picture/Lifespan
  ghc-options:    -threaded -O2


Executable gloss-machina
  Build-depends: 
        base            >= 4.8 && < 4.10,
        gloss           == 1.11.*
  Main-is:        Main.hs
  hs-source-dirs: picture/Machina
  ghc-options:    -threaded -O2
 

Executable gloss-occlusion
  Build-depends: 
        base            >= 4.8 && < 4.10,
        gloss            == 1.11.*,
        gloss-algorithms == 1.11.*
  Main-is: Main.hs
  other-modules:  Cell World State Data
  hs-source-dirs: picture/Occlusion
  ghc-options:    -threaded -O2


Executable gloss-styrene
  Build-depends: 
        base            >= 4.8 && < 4.10,
        ghc-prim        >= 0.4 && < 0.6,
        containers      == 0.5.*,
        gloss           == 1.11.*
  Main-is:        Main.hs
  other-modules:  Actor Advance Collide Config Contact QuadTree World
  hs-source-dirs: picture/Styrene
  ghc-options:    -threaded -O2


Executable gloss-tree
  Build-depends: 
        base            >= 4.8 && < 4.10,
        gloss           == 1.11.*
  Main-is:        Main.hs
  hs-source-dirs: picture/Tree
  ghc-options:    -threaded -O2


Executable gloss-visibility
  Build-depends: 
        base            >= 4.8 && < 4.10,
        vector          == 0.11.*,
        gloss           == 1.11.*
  Main-is:        Main.hs
  other-modules:  Draw Interface State World Geometry.Randomish Geometry.Segment
  hs-source-dirs: picture/Visibility 
  ghc-options:    -threaded -O2


Executable gloss-zen
  Build-depends: 
        base            >= 4.8 && < 4.10,
        gloss           == 1.11.*
  Main-is:        Main.hs
  hs-source-dirs: picture/Zen
  ghc-options:    -threaded -O2


Executable gloss-crystal
  Build-depends:
        base            >= 4.8 && < 4.10,
        gloss           == 1.11.*,
        gloss-raster    == 1.11.*
  Main-is:        Main.hs
  hs-source-dirs: raster/Crystal

  extensions:
        PatternGuards
        BangPatterns

  ghc-options:    
        -Wall -threaded -rtsopts -eventlog
        -Odph -fno-liberate-case
        -funfolding-use-threshold1000
        -funfolding-keeness-factor1000

 if flag(llvm)
  ghc-options:
        -fllvm -optlo-O3

        

Executable gloss-ray
  Build-depends:
        base           >= 4.8 && < 4.10,
        repa           == 3.4.*,
        repa-io        == 3.4.*,
        gloss          == 1.11.*,
        gloss-raster   == 1.11.*
  Main-is:        Main.hs
  other-modules:  Light Object Trace Vec3 World
  hs-source-dirs: raster/Ray
  ghc-options:    
        -Wall -threaded -rtsopts -eventlog
        -Odph -fno-liberate-case
        -funfolding-use-threshold1000
        -funfolding-keeness-factor1000

 if flag(llvm)
  ghc-options:
        -fllvm -optlo-O3


Executable gloss-pulse
  Build-depends:
        base           >= 4.8 && < 4.10,
        gloss          == 1.11.*,
        gloss-raster   == 1.11.*
  Main-is:        Main.hs
  hs-source-dirs: raster/Pulse
  ghc-options:
        -Wall -threaded -rtsopts -eventlog
        -Odph -fno-liberate-case
        -funfolding-use-threshold1000
        -funfolding-keeness-factor1000

 if flag(llvm)
  ghc-options:
        -fllvm -optlo-O3


Executable gloss-wave
  Build-depends:
        base           >= 4.8 && < 4.10,
        ghc-prim       == 0.5.*,
        vector         == 0.11.*,
        gloss          == 1.11.*,
        gloss-raster   == 1.11.*
  Main-is:        Main.hs
  hs-source-dirs: raster/Wave
  ghc-options:
        -Wall -threaded -rtsopts -eventlog
        -Odph -fno-liberate-case
        -funfolding-use-threshold1000
        -funfolding-keeness-factor1000

 if flag(llvm)
  ghc-options:
        -fllvm -optlo-O3


-- Disabled on 8/11/2016 as the linear solver is taking too long to build.
-- GHC compile time performance has regressed recently, so we could enable
-- it again once that it fixed.
--
-- Executable gloss-fluid
--   Build-depends:
--         base            >= 4.8 && < 4.10,
--         ghc-prim        == 0.5.*,
--         vector          == 0.11.*,
--         repa            == 3.4.*,
--         repa-io         == 3.4.*,
--         repa-algorithms == 3.4.*,
--         gloss           == 1.11.*
--   Main-is:        Main.hs
--   other-modules:  
--         Args Config FieldElt Model UserEvent
--         Solve.Density   Solve.Velocity
--         Stage.Advection Stage.Boundary Stage.Diffusion
--         Stage.Linear    Stage.Project  Stage.Sources
--   hs-source-dirs: raster/Fluid/src-repa
-- 
--   extensions:
--         PatternGuards
-- 
--   ghc-options:
--         -Wall -threaded -rtsopts -eventlog
--         -Odph -fno-liberate-case
--         -funfolding-use-threshold1000
--         -funfolding-keeness-factor1000
-- 
--  if flag(llvm)
--   ghc-options:
--         -fllvm -optlo-O3

        

Executable gloss-snow
  Build-depends:
        base            >= 4.8 && < 4.10,
        repa            == 3.4.*,
        repa-algorithms == 3.4.*,
        gloss           == 1.11.*
  Main-is:      Main.hs
  hs-source-dirs: raster/Snow
  ghc-options:
        -Wall -threaded -rtsopts -eventlog
        -Odph -fno-liberate-case
        -funfolding-use-threshold1000
        -funfolding-keeness-factor1000

 if flag(llvm)
  ghc-options:
        -fllvm -optlo-O3


Executable gloss-mandel
  Build-depends:
        base            >= 4.8 && < 4.10,
        repa            == 3.4.*,
        gloss           == 1.11.*
  Main-is:        Main.hs
  other-modules:  Solver
  hs-source-dirs: raster/Mandel

  extensions:
        PatternGuards

  ghc-options:
        -Wall -threaded -rtsopts -eventlog
        -Odph -fno-liberate-case
        -funfolding-use-threshold1000
        -funfolding-keeness-factor1000

 if flag(llvm)
  ghc-options:
        -fllvm -optlo-O3



Executable gloss-graph
  Build-depends:
        base            >= 4.8 && < 4.10,
        containers      == 0.5.*,
        gloss           == 1.11.*
  Main-is:        Main.hs
  hs-source-dirs: picture/Graph
  ghc-options:
        -Wall -O2


Executable gloss-gravity
  Build-depends:
        base            >= 4.8 && < 4.10,
        containers      == 0.5.*,
        gloss           == 1.11.*
  Main-is:        Main.hs
  hs-source-dirs: picture/Gravity
  ghc-options:
        -Wall -O2


-- Disabled on 8/11/2016 as GLFW-b does not build on OSX.
-- Executable gloss-render
--   Build-depends:
--         base            >= 4.8 && < 4.10,
--         containers      == 0.5.*,
--         gloss           == 1.11.*,
--         gloss-rendering == 1.11.*,
--         GLFW-b
--   Main-is:        Main.hs
--   hs-source-dirs: picture/Render
--   ghc-options:
--         -Wall -O2

